--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,52 @@
 ---
 layout: default
 ---
+
+<div class="notes-header">
+		<a href=""><img src="/icons/folder.png" class="archive-icon"></a>
+		<a href=""><img src="/icons/star.png" class="favorites-icon"></a>
+		<input type="search" class="notes-search">
+		<img src="/icons/magnifying-glass.png" class="search-icon">
+	</div>
+	<button class="new-note">+</button>
+	<div class="timeline">
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>History, Stephen said, is a nightmare from which I am trying to awake.</p>
+			</div>
+		</a>
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>Love loves to love love.</p>
+			</div>
+		</a>
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>I wish some man or other would take me sometime when hes there and kiss me in his arms theres nothing like a kiss long and hot down to your soul almost paralyses you...I love flowers Id love to have the whole place swimming in roses God of heaven theres nothing like nature the wild mountains then the sea and waves rushing then the beautiful country with the fields of oats and wheat and all kinds of things and all the fine cattle going about that would do your heart good to see rivers and lakes and flowers all sorts of shapes and smells and colours...after that long kiss I near lost my breath yes he said I was a flower of the mountain yes so we are flowers all a womans body yes...then I asked him with my eyes to ask again yes and then he asked me would I yes to say yes my mountain flower and first I put my arms around him yes and drew him down to me so he could feel my breasts all perfume yes and his heart was going like mad and yes I said yes I will yes.</p>
+			</div>
+		</a>
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>The sea, the snotgreen sea, the scrotumtightening sea.</p>
+			</div>
+		</a>
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>Open your eyes now. I will. One moment. Has all vanished since? If I open and am for ever in the black adiaphane. Basta! I will see if I can see. See now. There all the time without you: and ever shall be, world without end.</p>
+			</div>
+		</a>
+		<a href="">
+			<div class="note">
+				<p class="date">February 10, 2016</p>
+				<p>I am, a stride at a time. A very short space of time through very short time of space</p>
+			</div>
+		</a>
+	</div>
 <article class="post">
 
   <header class="post-header">
