--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,9 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 
+$gray: #efefef;
+
+
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -49,5 +52,6 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "notes"
 ;
