--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,10 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
+    @include Anton;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
