--- a/_sass/_notes.scss
+++ b/_sass/_notes.scss
@@ -38,9 +38,11 @@ article {
 	}
 	.note-date {
 		@include Anton;
-		font-size: .8em;
+		font-size: 1em;
+		letter-spacing: .06em;
 		margin-bottom: .5em;
 		display: inline-block;
+		color: #678EA2;
 	}
 }
 
