--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,14 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
+  <div class="footer-links">
+    <a href="http://brianfeeney.us">brianfeeney.us</a>
+    <a href="">RSS</a>
   </div>
+
+  <div class="foot1"></div>
+  <div class="foot2"></div>
+  <div class="foot3"></div>
+  <div class="foot4"></div>
+  <div class="foot5"></div>
 
 </footer>
