--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,11 +110,11 @@ a {
  * Blockquotes
  */
 blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
+    color: #000;
+    margin: 1.5em 0;
+    border-left: 4px solid #D1DCE2;
     padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
+    font-size: 16px;
     font-style: italic;
 
     > :last-child {
