--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -107,7 +107,18 @@
     }
 }
 
-
+.pagination {
+    padding: 4em 0 8em;
+    border-top: 1px solid #000;
+    overflow: hidden;
+    @include sanserif;
+    .previous {
+        float: right;
+    }
+    .next {
+        float: left;
+    }
+}
 
 /**
  * Site footer
