--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="footer-links">
     <a href="http://brianfeeney.us">brianfeeney.us</a>
-    <a href="">RSS</a>
+    <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
   </div>
 
   <div class="foot1"></div>
