hiding my photo in footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -125,8 +125,8 @@
  */
 .site-footer {
     padding: $spacing-unit 0;
-    min-height: 110vh;
-    background-image: url(/assets/portrait_by-Williams.png);
+    /* min-height: 110vh; */
+    /* background-image: url(/assets/portrait_by-Williams.png); */
     background-size: cover;
     background-position: 50% 50%;
     background-attachment: fixed;
