--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -164,8 +164,8 @@
         text-align: center;
         width: 100%;
         margin: 0 auto;
-        position: absolute;
-        bottom: 210px;
+        /* position: absolute;
+        bottom: 210px; */
         a {
             color: #fff;
             display: inline-block;
