--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
-  <div class="container">
-
+    <div class="myphoto"></div>
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="bfus-link" href="http://brianfeeney.us">brianfeeney.us</a>
 
     <!--
     <nav class="site-nav">
@@ -15,7 +15,5 @@
       </div>
     </nav>
     -->
-
-  </div>
 
 </header>
