--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <link href="https://fonts.googleapis.com/css?family=Martel+Sans:900" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700|Crimson+Text:400,400i,700,700i" rel="stylesheet">
 </head>
