--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,7 +23,7 @@
     @include sanserif;
     // Positioning context for the mobile navigation icon
     position: relative;
-    padding: 20px 20px 8px;
+    padding: 1.25em 1.25em .5em;
     margin-bottom: 40px;
     box-shadow: 0px 3px 22px rgba(0, 0, 0, 0.3);
     .container {
@@ -32,12 +32,15 @@
     a, a:visited {
         color: black;
     }
+    @media (min-width: 600px) {
+        font-size: .5em;
+    }
 }
 
 .myphoto {
     background-image: url(/assets/portrait_by-Williams.png);
-    height: 80px;
-    width: 80px;
+    height: 5em;
+    width: 5em;
     margin-bottom: 0;
     background-size: cover;
     background-position: center;
@@ -46,9 +49,9 @@
 }
 
 .site-title {
-    font-size: 64px;
+    font-size: 4em;
     display: inline-block;
-    margin: -64px 0 0 16px;
+    margin: -1em 0 0 .25em;
     vertical-align: middle;
     font-weight: 800;
     color: #000;
@@ -62,10 +65,11 @@
 
 .bfus-link {
     display: none;
-    @media (min-width: 500px) {
+    font-size: 16px;
+    @media (min-width: 600px) {
         display: inline-block;
         float: right;
-        margin-top: 25px;
+        margin-top: 13px;
         margin-right: 25px;
     }
 }
@@ -139,8 +143,7 @@
 }
 
 .pagination {
-    padding: 4em 0 8em;
-    border-top: 1px solid #000;
+    padding: 4em 20px 8em;
     overflow: hidden;
     @include sanserif;
     .previous {
@@ -149,6 +152,9 @@
     .next {
         float: left;
     }
+    @media (max-width: 500px) {
+        box-shadow: 0px -1px 22px rgba(0, 0, 0, 0.3);
+    }
 }
 
 /**
@@ -156,6 +162,7 @@
  */
 .site-footer {
     padding: $spacing-unit 0;
+    display: none;
     /* min-height: 110vh; */
     /* background-image: url(/assets/portrait_by-Williams.png); */
     background-size: cover;
