--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -114,6 +114,7 @@ blockquote {
     margin: 1.5em 0;
     /* border-left: 4px solid #D1DCE2; */
     padding-left: $spacing-unit;
+    padding-right: $spacing-unit;
     font-size: 1em;
     font-style: italic;
 
