--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,7 +24,7 @@
     // Positioning context for the mobile navigation icon
     position: relative;
     padding: 1.25em 1.25em .5em;
-    margin-bottom: 40px;
+    margin-bottom: 2em;
     /* box-shadow: 0px 3px 22px rgba(0, 0, 0, 0.3); */
     .container {
         border-bottom: 1px solid black;
@@ -34,6 +34,7 @@
     }
     @media (min-width: 600px) {
         font-size: .5em;
+        margin-bottom: 12em;
     }
 }
 
@@ -46,12 +47,19 @@
     background-position: center;
     border-radius: 50%;
     display: inline-block;
+
+    @media (min-width: 600px) {
+        position: absolute;
+        left: 50%;
+        margin-left: -2.5em;
+        top: 2em;
+    }
 }
 
 .site-title {
     font-size: 4em;
     display: inline-block;
-    margin: -1em 0 0 .25em;
+    margin: -.75em 0 0 .25em;
     vertical-align: middle;
     font-weight: 800;
     color: #000;
@@ -61,11 +69,16 @@
     &:hover {
         text-decoration: none;
     }
+    @media (min-width: 600px) {
+        margin-top: 0;
+    }
 }
 
 .bfus-link {
-    display: none;
     font-size: 16px;
+    position: absolute;
+    top: 1em;
+    right: 1em;
     @media (min-width: 600px) {
         display: inline-block;
         float: right;
