--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,6 @@
   <link href="https://fonts.googleapis.com/css?family=Martel+Sans:900" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700|Crimson+Text:400,400i,700,700i" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
 </head>
