--- a/css/main.scss
+++ b/css/main.scss
@@ -51,7 +51,5 @@ $gray: #efefef;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
-        "syntax-highlighting",
-        "notes"
+        "layout"
 ;
