--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700|Crimson+Text:400,400i,700,700i" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
+
+  <script src="https://use.typekit.net/hho3pbv.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
