--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,6 @@
 <header class="site-header">
 
-    <div class="myphoto"></div>
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-    <a class="bfus-link" href="http://brianfeeney.us">brianfeeney.us</a>
-
-    <!--
-    <nav class="site-nav">
-      <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-    -->
+    <a class="heading" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="aboutLink" href="#about">➔</a>
 
 </header>
