updates photos footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 	</section>
 	<section>
 		<div class="container">
-			<a class="heading" href="http://photos.brianfeeney.us">Photos <span>➔</span></a>
+			<a class="heading" href="http://brianfeeney.us/photos">Photos <span>➔</span></a>
 		</div>
 	</section>
 	<section>
