--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,10 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <link rel="alternate" title="My Feed" type="application/json" href="https://example.org/feed.json" />
+
   <link href="https://fonts.googleapis.com/css?family=Martel+Sans:900" rel="stylesheet">
-
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700|Crimson+Text:400,400i,700,700i" rel="stylesheet">
-
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
 
   <script src="https://use.typekit.net/hho3pbv.js"></script>
