new base design

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-    <a class="heading" href="{{ site.baseurl }}/">{{ site.title }}</a>
-    <a class="aboutLink" href="#about">➔</a>
+    <a class="heading" href="{{ site.baseurl }}/">Brian Feeney</a>
+    <a class="aboutLink" href="/about">About</a>
 
 </header>
