--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,5 @@
   <link rel="alternate" title="My Feed" type="application/json" href="https://example.org/feed.json" />
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|IBM+Plex+Serif:300,300i,400,400i,700,700i" rel="stylesheet">
-
-  <script src="https://use.typekit.net/hho3pbv.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
