--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,6 +34,10 @@
     min-height: 50vh;
  }
 
+ h1, h2, h3, h4, h5 {
+    margin-top: 1.4em;
+ }
+
  h1 {
     font-weight: 800;
  }
@@ -71,7 +75,7 @@ hr {
 
 .container {
     width: 100%;
-    max-width: 30em;
+    max-width: 35em;
     margin: 0 auto;
     padding: 0 1rem;
 }
