--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,7 +9,7 @@ layout: homepage
 
       <article>
         <a class="link" href="{{ post.url | prepend: site.baseurl }}">
-          <span class="note-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+          <span class="note-date">{{ post.date | date: "%b %-d, %Y %r" }}</span>
         </a>
         <div class="post-content" itemprop="articleBody">
           {{ post.content }}
