--- a/_layouts/photos.html
+++ b/_layouts/photos.html
@@ -11,7 +11,7 @@ hi
 
       <article>
         <a class="link" href="{{ post.url | prepend: site.baseurl }}">
-          <span class="note-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+          <span class="note-date">{{ post.date | date: "%b %-d, %Y %r" }}</span>
         </a>
         <div class="post-content" itemprop="articleBody">
           {{ post.content }}
