--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,6 +28,14 @@
  body {
     font-size: 18px;
     @include serif;
+    color: $black;
+    background-color: $white;
+    @media (min-width: 1000px) {
+        font-size: 1.2em;
+    }
+    @media (min-width: 1400px) {
+        font-size: 1.4em;
+    }
  }
 
  main {
@@ -47,10 +55,10 @@
  }
 
  p a {
-    color: black;
+    color: $black;
     text-decoration: underline;
     &:visited {
-        color: black;
+        color: $black;
     }
     &:hover {
         background-color: rgba($black, .1);
@@ -77,18 +85,18 @@ hr {
     width: 100%;
     max-width: 35em;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 1em;
 }
 
  // Header
 
 .site-header {
     @include sanserif;
-    padding: 2rem 1rem;
+    padding: 2em 1em;
     text-align: center;
-    margin-bottom: 3.5rem;
+    margin-bottom: 3.5em;
     a {
-        margin-right: 1rem;
+        margin-right: 1em;
         font-weight: 100;
         color: $black;
         &:last-child {
@@ -101,20 +109,18 @@ hr {
 }
 
 
-
-
 // Body
 
 article {
-    margin-bottom: 2.75rem;
-    padding-bottom: 2.75rem;
+    margin-bottom: 2.75em;
+    padding-bottom: 2.75em;
     border-bottom: 1px solid rgba($black, .1);
     @include serif;
     .note-date {
         @include sanserif;
         display: block;
-        font-size: .9rem;
-        margin-bottom: .9rem;
+        font-size: .9em;
+        margin-bottom: .9em;
     }
     a {
         color: $black;
@@ -129,8 +135,9 @@ article {
         padding-right: 0;
         p {
             font-style: italic;
-            font-weight: 300;
-            line-height: 1.8rem;
+            font-weight: 400;
+            line-height: 1.5em;
+            color: $black;
         }
     }
 }
@@ -187,14 +194,14 @@ footer {
         }
     }
     .myphoto {
-        max-width: 15rem;
+        max-width: 15em;
         margin: 0 auto;
     }
 }
 
 
 .aboutLinks {
-    margin-top: 10rem;
+    margin-top: 10em;
     text-align: center;
     a {
         display: block;
