adding music review posts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,4 +240,26 @@ footer {
 }
 
 
+/* ----- Music Review ----- */
+
+article.musicreview {
+    img {
+        margin-bottom: 1em;
+        @media (min-width: 450px) {
+            width: 25%;
+            float: left;
+            margin-right: 1em;
+        }
+    }
+    h1 {
+        margin-bottom: 0;
+    }
+    h4 {
+        margin-top: 0;
+    }
+    .reviewLink {
+        @include sanserif;
+        font-weight: 100;
+    }
+}
 
