--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -244,7 +244,8 @@ footer {
 
 article.musicreview {
     img {
-        margin-bottom: 1em;
+        margin-bottom: 0;
+        max-width: 200px;
         @media (min-width: 450px) {
             width: 25%;
             float: left;
